--- a/research/massivepilot/masscomp.ipynb
+++ b/research/massivepilot/masscomp.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -139,33 +139,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "column name 'Z' not found (case insensitive)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/usr/local/anaconda3/envs/py35/lib/python3.6/site-packages/fitsio/fitslib.py\u001b[0m in \u001b[0;36m_extract_colnum\u001b[0;34m(self, col)\u001b[0m\n\u001b[1;32m   2621\u001b[0m                     \u001b[0mmess\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"column name '%s' not found (case insensitive)\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mcol\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2622\u001b[0;31m                     \u001b[0mcolnum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_colnames_lower\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2623\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: 'z' is not in list",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-ccd4474b0d19>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Reas in RedMaPPer data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mrminfo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfitsio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFITS\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrmcatfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mrmcat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrminfo\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Z'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'RA'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'DEC'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'LAMBDA_CHISQ'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'MSTAR_50'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'MSTAR_ERR'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'IMAG'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/usr/local/anaconda3/envs/py35/lib/python3.6/site-packages/fitsio/fitslib.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, **keys)\u001b[0m\n\u001b[1;32m   1803\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;34m'columns'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mkeys\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1804\u001b[0m                 \u001b[0;32mdel\u001b[0m \u001b[0mkeys\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'columns'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1805\u001b[0;31m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_columns\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1806\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mrows\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1807\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;34m'rows'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mkeys\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/anaconda3/envs/py35/lib/python3.6/site-packages/fitsio/fitslib.py\u001b[0m in \u001b[0;36mread_columns\u001b[0;34m(self, columns, **keys)\u001b[0m\n\u001b[1;32m   1985\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1986\u001b[0m         \u001b[0;31m# if columns is None, returns all.  Guaranteed to be unique and sorted\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1987\u001b[0;31m         \u001b[0mcolnums\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_extract_colnums\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1988\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolnums\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1989\u001b[0m             \u001b[0;31m# scalar sent, don't read as a recarray\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/anaconda3/envs/py35/lib/python3.6/site-packages/fitsio/fitslib.py\u001b[0m in \u001b[0;36m_extract_colnums\u001b[0;34m(self, columns)\u001b[0m\n\u001b[1;32m   2597\u001b[0m         \u001b[0mcolnums\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'i8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2598\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mxrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolnums\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2599\u001b[0;31m             \u001b[0mcolnums\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_extract_colnum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2600\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2601\u001b[0m         \u001b[0;31m# returns unique sorted\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/anaconda3/envs/py35/lib/python3.6/site-packages/fitsio/fitslib.py\u001b[0m in \u001b[0;36m_extract_colnum\u001b[0;34m(self, col)\u001b[0m\n\u001b[1;32m   2622\u001b[0m                     \u001b[0mcolnum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_colnames_lower\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2623\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2624\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmess\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2625\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolnum\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2626\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: column name 'Z' not found (case insensitive)"
-     ]
+     "data": {
+      "text/plain": [
+       "\n",
+       "  file: /global/work/projects/redmapper/redmapper_isedfit_v5.10_centrals.fits.gz\n",
+       "  extension: 1\n",
+       "  type: BINARY_TBL\n",
+       "  rows: 407118\n",
+       "  column info:\n",
+       "    MEM_MATCH_ID        i4  \n",
+       "    Z                   f4  \n",
+       "    RA                  f8  \n",
+       "    DEC                 f8  \n",
+       "    R                   f4  \n",
+       "    P                   f4  \n",
+       "    PFREE               f4  \n",
+       "    THETA_I             f4  \n",
+       "    THETA_R             f4  \n",
+       "    IMAG                f4  \n",
+       "    IMAG_ERR            f4  \n",
+       "    ZRED                f4  \n",
+       "    ZRED_E              f4  \n",
+       "    ZRED_CHISQ          f4  \n",
+       "    BCG_SPEC_Z          f4  \n",
+       "    Z_SPEC_INIT         f4  \n",
+       "    Z_INIT              f4  \n",
+       "    LAMBDA_CHISQ        f4  \n",
+       "    LAMBDA_CHISQ_E      f4  \n",
+       "    LAMBDA_ZRED         f4  \n",
+       "    LAMBDA_ZRED_E       f4  \n",
+       "    R_LAMBDA            f4  \n",
+       "    SCALEVAL            f4  \n",
+       "    MASKFRAC            f4  \n",
+       "    C_LAMBDA            f4  array[4]\n",
+       "    C_LAMBDA_ERR        f4  array[4]\n",
+       "    MAG_LAMBDA_ERR      f4  array[5]\n",
+       "    CHISQ               f4  \n",
+       "    Z_LAMBDA            f4  \n",
+       "    Z_LAMBDA_E          f4  \n",
+       "    EBV_MEAN            f4  \n",
+       "    LNLAMLIKE           f4  \n",
+       "    LNBCGLIKE           f4  \n",
+       "    LNLIKE              f4  \n",
+       "    PZBINS              f4  array[21]\n",
+       "    PZ                  f4  array[21]\n",
+       "    NCROSS              i2  \n",
+       "    RMASK               f4  \n",
+       "    RA_ORIG             f8  \n",
+       "    DEC_ORIG            f8  \n",
+       "    W                   f4  \n",
+       "    DLAMBDA_DZ          f4  \n",
+       "    DLAMBDA_DZ2         f4  \n",
+       "    DLAMBDAVAR_DZ       f4  \n",
+       "    DLAMBDAVAR_DZ2      f4  \n",
+       "    LAMBDA_CHISQ_C      f4  \n",
+       "    LAMBDA_CHISQ_CE     f4  \n",
+       "    NCENT               i2  \n",
+       "    NCENT_GOOD          i2  \n",
+       "    RA_CENT             f8  array[5]\n",
+       "    DEC_CENT            f8  array[5]\n",
+       "    ID_CENT             i4  array[5]\n",
+       "    LAMBDA_CHISQ_CENT\n",
+       "                        f4  array[5]\n",
+       "    ZLAMBDA_CENT        f4  array[5]\n",
+       "    P_BCG               f4  array[5]\n",
+       "    P_CEN               f4  array[5]\n",
+       "    Q_CEN               f4  array[5]\n",
+       "    P_FG                f4  array[5]\n",
+       "    Q_MISS              f4  \n",
+       "    P_SAT               f4  array[5]\n",
+       "    P_C                 f4  array[5]\n",
+       "    BCG_ILUM            f4  \n",
+       "    ILUM                f4  \n",
+       "    Z_LAMBDA_RAW        f4  \n",
+       "    Z_LAMBDA_E_RAW      f4  \n",
+       "    LIM_EXPTIME         f4  \n",
+       "    LIM_LIMMAG          f4  \n",
+       "    LIM_LIMMAG_HARD     f4  \n",
+       "    KCORR_MSTAR         f4  \n",
+       "    KCORR_COEFFS        f4  array[5]\n",
+       "    KCORR_CHI2          f4  \n",
+       "    KCORR_UVFLUX        f4  array[2]\n",
+       "    FNUV_ABSMAG_00      f4  array[2]\n",
+       "    FNUV_ABSMAG_IVAR_00\n",
+       "                        f4  array[2]\n",
+       "    UGRIZ_ABSMAG_00     f4  array[5]\n",
+       "    UGRIZ_ABSMAG_IVAR_00\n",
+       "                        f4  array[5]\n",
+       "    UBVRI_ABSMAG_00     f4  array[5]\n",
+       "    UBVRI_ABSMAG_IVAR_00\n",
+       "                        f4  array[5]\n",
+       "    JHK_ABSMAG_00       f4  array[3]\n",
+       "    JHK_ABSMAG_IVAR_00\n",
+       "                        f4  array[3]\n",
+       "    ISEDFIT_ID          i4  \n",
+       "    MAGGIES             f4  array[7]\n",
+       "    IVARMAGGIES         f4  array[7]\n",
+       "    BESTMAGGIES         f4  array[7]\n",
+       "    CHUNKINDX           i2  \n",
+       "    MODELINDX           i2  \n",
+       "    DELAYED             i4  \n",
+       "    BURSTTYPE           i4  \n",
+       "    CHI2                f4  \n",
+       "    TOTALMASS           f4  \n",
+       "    TOTALMASS_ERR       f4  \n",
+       "    MSTAR               f4  \n",
+       "    AGE                 f4  \n",
+       "    SFRAGE              f4  \n",
+       "    TAU                 f4  \n",
+       "    ZMETAL              f4  \n",
+       "    AV                  f4  \n",
+       "    MU                  f4  \n",
+       "    OIIIHB              f4  \n",
+       "    NLYC                f4  \n",
+       "    SFR                 f4  \n",
+       "    SFR100              f4  \n",
+       "    B100                f4  \n",
+       "    B1000               f4  \n",
+       "    EWOII               f4  \n",
+       "    EWOIIIHB            f4  \n",
+       "    EWNIIHA             f4  \n",
+       "    NBURST              i2  \n",
+       "    TRUNCTAU            f4  \n",
+       "    TBURST              f4  array[7]\n",
+       "    DTBURST             f4  array[7]\n",
+       "    FBURST              f4  array[7]\n",
+       "    MSTAR_50            f4  \n",
+       "    AGE_50              f4  \n",
+       "    SFRAGE_50           f4  \n",
+       "    TAU_50              f4  \n",
+       "    ZMETAL_50           f4  \n",
+       "    AV_50               f4  \n",
+       "    MU_50               f4  \n",
+       "    OIIIHB_50           f4  \n",
+       "    SFR_50              f4  \n",
+       "    SFR100_50           f4  \n",
+       "    B100_50             f4  \n",
+       "    B1000_50            f4  \n",
+       "    EWOII_50            f4  \n",
+       "    EWOIIIHB_50         f4  \n",
+       "    EWNIIHA_50          f4  \n",
+       "    MSTAR_AVG           f4  \n",
+       "    AGE_AVG             f4  \n",
+       "    SFRAGE_AVG          f4  \n",
+       "    TAU_AVG             f4  \n",
+       "    ZMETAL_AVG          f4  \n",
+       "    AV_AVG              f4  \n",
+       "    MU_AVG              f4  \n",
+       "    OIIIHB_AVG          f4  \n",
+       "    SFR_AVG             f4  \n",
+       "    SFR100_AVG          f4  \n",
+       "    B100_AVG            f4  \n",
+       "    B1000_AVG           f4  \n",
+       "    EWOII_AVG           f4  \n",
+       "    EWOIIIHB_AVG        f4  \n",
+       "    EWNIIHA_AVG         f4  \n",
+       "    MSTAR_ERR           f4  \n",
+       "    AGE_ERR             f4  \n",
+       "    SFRAGE_ERR          f4  \n",
+       "    TAU_ERR             f4  \n",
+       "    ZMETAL_ERR          f4  \n",
+       "    AV_ERR              f4  \n",
+       "    MU_ERR              f4  \n",
+       "    OIIIHB_ERR          f4  \n",
+       "    SFR_ERR             f4  \n",
+       "    SFR100_ERR          f4  \n",
+       "    B100_ERR            f4  \n",
+       "    B1000_ERR           f4  \n",
+       "    EWOII_ERR           f4  \n",
+       "    EWOIIIHB_ERR        f4  \n",
+       "    EWNIIHA_ERR         f4  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Reas in RedMaPPer data\n",
     "rminfo = fitsio.FITS(rmcatfile)\n",
-    "rmcat = rminfo[1].read(columns=['Z', 'RA', 'DEC', 'LAMBDA_CHISQ', 'MSTAR_50', 'MSTAR_ERR', 'IMAG'])"
+    "rmcat = rminfo[1].read(columns=['Z', 'RA', 'DEC', 'LAMBDA_CHISQ', 'MSTAR_50', 'MSTAR_ERR', 'IMAG'])\n",
+    "rminfo[1]"
    ]
   },
   {
