cleaning up the notebook

--- a/summer2017/megan/meg-summer-notebook.ipynb
+++ b/summer2017/megan/meg-summer-notebook.ipynb
@@ -475,7 +475,23 @@
     "collapsed": true
    },
    "source": [
-    "In the morning, Coley and I worked with Dr. Moustakas and made some good progress. Then we plotted blackbody curves."
+    "In the morning, Coley and I worked with Dr. Moustakas and made some good progress. Then we plotted blackbody curves and tried to add them togther to see if galaxies are also blackbodies (they're not). After lunch, Coley and I continued to work on Prospector until Dr. Moustakas came and gave us a mini lecture on how the mass of a dark matter halo is related the stellar mass and the efficiency of star formation. After, Coley and I worked for another half hour on star formation. Later that night, I watched a lecture on Frequentist and Bayesian Statistics."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Wednesday 05/31/17"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the morning, "
    ]
   },
   {
