--- a/summer2017/megan/meg-summer-notebook.ipynb
+++ b/summer2017/megan/meg-summer-notebook.ipynb
@@ -513,6 +513,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Friday 06/02/17"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the morning, I came in early and worked a little bit on the workshop. Coley, Kevin, and I tried debugging Prospector, but with little success. In the afternoon, I worked on the workshop until Dr. Moustakas came in. Then, he, Coley, and I worked on debugging Prospector."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
