updates to emacs script + plots

--- a/summer2017/megan/meg-summer-notebook.ipynb
+++ b/summer2017/megan/meg-summer-notebook.ipynb
@@ -541,7 +541,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the morning, I came in and answered a few emails and updated our list of the teachers attending the workshop with a new email address. After, I opened up our Prospector notebook and tried to decipher Ben's email from Friday with Coley."
+    "In the morning, I came in and answered a few emails and updated our list of the teachers attending the workshop with a new email address. After, I opened up our Prospector notebook and tried to decipher Ben's email from Friday with Coley. Then I worked on the teacher workshop again until Dr. Moustakas came down around 2:20 and we began writing the python script."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Tuesday 06/06/17"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Coley was sick. I worked on the teacher workshop."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Wednesday 06/07/17"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the morning, Coley, Dr. Moustakas, and I worked on the teacher workshop. Then, Dr. Moustakas left because Phineas broke his wrist. Coley and I contiued to work on the workshop."
    ]
   },
   {
