--- a/summer2017/megan/meg-summer-notebook.ipynb
+++ b/summer2017/megan/meg-summer-notebook.ipynb
@@ -575,6 +575,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Wednesday 06/14/17"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Today, we worked on the teacher workshop in the mroning and then Prospector in the afternoon. Our script is almost complete! We just have to debug a few more things."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
