trying to run on larger sample

--- a/research/redmapper/redmapper-vs-prospector.ipynb
+++ b/research/redmapper/redmapper-vs-prospector.ipynb
@@ -326,7 +326,7 @@
     "prosp = glob('~/stellar-mass/redmapper-sdssphot/*') # get rid of redmapper-sdssphot for test files\n",
     "print(red)\n",
     "\n",
-    "# I think I have to read in differntly because those are just the files names...\n",
+    "# I think I have to read in differently because those are just the files names...\n",
     "# Need to read in the actual data..."
    ]
   },
