--- a/research/upenn-photdec/upenn-photdec.ipynb
+++ b/research/upenn-photdec/upenn-photdec.ipynb
@@ -149,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "allcast = castinfo[1].read()"
@@ -476,7 +478,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "castmodfile = os.path.join(adddir, 'UPenn_PhotDec_CASTmodels.fits')\n",
@@ -498,7 +502,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mendelfile = os.path.join(adddir, 'UPenn_PhotDec_Mstar_mlMendel14.dat')\n",
@@ -514,7 +520,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "allmendel"
@@ -530,7 +538,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print('r-band range = {:.3f} - {:.3f}'.format(rfit['m_tot'].min(), rfit['m_tot'].max()))\n",
@@ -540,7 +550,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -554,7 +566,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -566,7 +580,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -578,7 +594,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "labels = ['r (AB mag)', 'g - r', 'Sersic n', 'Half-light Radius (arcsec)']\n",
@@ -589,7 +607,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "_ = corner(data, quantiles=[0.25, 0.50, 0.75], labels=labels)"
