--- a/teaching/310-F17/harmonic-oscillator/harmonic-oscillator.ipynb
+++ b/teaching/310-F17/harmonic-oscillator/harmonic-oscillator.ipynb
@@ -363,13 +363,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Compute the best-fitting model and scale the parameter uncertainties by the reduced chi^2."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -387,21 +380,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "chisq = np.sum( (yavg - ymodel)**2 / yerr**2 ) / (len(yavg) - 3)\n",
-    "print(chisq)\n",
-    "perr = perr_raw * np.sqrt(chisq)"
+    "#### Scale the parameter uncertainties by the reduced chi^2."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17.0213641833\n"
+     ]
+    }
+   ],
+   "source": [
+    "chisq = np.sum( (yavg - ymodel)**2 / yerr**2 ) / (len(yavg) - 3)\n",
+    "print(chisq)\n",
+    "perr_scaled = perr * np.sqrt(chisq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +419,14 @@
     }
    ],
    "source": [
-    "print(param, perr)"
+    "print(param, perr_scaled)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Make a plot with the best-fitting model."
    ]
   },
   {
