--- a/teaching/310-F17/harmonic-oscillator/harmonic-oscillator.ipynb
+++ b/teaching/310-F17/harmonic-oscillator/harmonic-oscillator.ipynb
@@ -365,7 +365,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ymodel = shm(time, param[0], param[1], param[2])"
